----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-11-04 Garvin Hicking <me@supergarv.de>
    * Documentation.html: Added known limitation about ANSI-mode
      (Bug #816858)
    * libraries/transformations/text_plain__dateformat.inc.php3:
      Bug #835252: Now allow more timestamps. Minor modification of a patch
      submitted by anonymous poster. Thanks!

2003-11-03 Garvin Hicking <me@supergarv.de>
    * Documentation.html, tbl_row_delete.php3,
      libraries/display_tbl.lib.php3:
      Bug #828290: Fixed "Execute stored bookmark". Also made some minor
      tweaks to make PHP-Transformations with forms working again. Added
      a limitation notice on that to FAQ 3.8. Added an image to this action.
    * libraries/display_tbl.lib.php3: Made multi-row delete working for
      vertical browse mode. When executing a multi-row delete, keep the
      last used display mode and other options.
    * Documentation.html: Adjusted link to the link-section of our homepage.
      Fixed typo.

2003-11-03 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/czech: Updated.
    * libraries/common.lib.php3: URI detection works with www-Sharp.Runtime
      (RFE #834053).

2003-11-03 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/german-*.inc.php3: Grammar.
    * config.inc.php3, libraries/common.lib.php3,
      libraries/config_import.lib.php3, libraries/display_export.lib.php3,
      libraries/export/csv.php3, lang/*.inc.php3:
      Bug #812474 (Excel v.X does not import 'CSV for Excel' exports).

2003-11-02 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/arabic: big update, thanks to Ossama Khayat (okhayat)
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).

2003-11-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php3: bug 826880, quotes added

2003-10-31 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/romanian: Updated, thanks to Valics Lehel.