@@ -2791,6 +2791,17 @@ To create a new, empty mimetype please see libraries/transformations/template_ge
     When MySQL is running in ANSI-compatibility mode, there are some major differences in how SQL is structured (see http://www.mysql.com/doc/en/ANSI_mode.html). Most important of all, the quote-character (") is interpreted as an identifier quote character and not as a string quote character, which makes many internal phpMyAdmin operations into invalid SQL statements. There is no workaround to this behaviour. News to this item will be posted in Bug report <a href="https://sourceforge.net/tracker/index.php?func=detail&amp;aid=816858&amp;group_id=23067&amp;atid=377408">#816858</a>
 </p>
 
+<h4>
+    [3.10] Homonyms and no primary key: When the results of a SELECT display
+    more that one column with the same value 
+    (for example <tt>SELECT lastname from employees where firstname like 'A%'</tt> and two &quot;Smith&quot; values are displayed),
+    if I click Edit I cannot be sure that I am editing the intended row. 
+</h4>
+<p>
+    Please make sure that your table has a primary key, so that phpMyAdmin
+    can use it for the Edit and Delete links.
+</p>
+
 <a name="faqmultiuser"></a><br />
 <h3>[4. ISPs, multi-user installations ]</h3>
 
